# counter-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: codec.rs  lib.rs  main.rs  service.rs
