[package]
name = "counter-server"
version = "0.1.0"
authors = ["ve"]

[dependencies]
clippy = {version = "0.0.172", optional = true}

tokio-core = "0.1.10"
tokio-io = "0.1.4"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
futures = "0.1.17"
futures-cpupool = "0.1.7"
rand = "0.3.18"
bytes = "0.4"
byteorder = "1.1.0"
atoi = "0.2.2"
num_cpus = "1.7.0"

[features]
default = []
dev = ["clippy"]